--- a/view/src/main/webapp/user/profile.xhtml
+++ b/view/src/main/webapp/user/profile.xhtml
@@ -16,7 +16,7 @@
 
 <h:body>
     <header>
-        <h:graphicImage id="logo" value="resources/css/logo3.png"></h:graphicImage>
+        <h:graphicImage id="logo" value="/resources/css/logo3.png" />
         <div id="logname">
             Сервис Страховок ОСАГО / КАСКО
         </div>
