--- a/view/src/main/webapp/logoutinfo.xhtml
+++ b/view/src/main/webapp/logoutinfo.xhtml
@@ -28,9 +28,11 @@
             <p id="instruc">
                 Вы прошли регистрацию в страховом сервисе. Тепреь вы можете зайти в сервис и пользоваться всеми возможностями предоставленные страховщикам. Приступайте к работе. Спасибо за регистрацию!
             </p>
-            <p id="userdata">
-                <h:commandButton id="button" name="buttonLogOut" value="Вернуться на главную"></h:commandButton>
-            </p>
+            <h:form>
+                <p id="userdata">
+                    <h:commandButton id="button" name="buttonLogOut" value="Вернуться на главную" action="index"></h:commandButton>
+                </p>
+            </h:form>
         </div>
     </div>
 </h:body>
