--- a/view/src/main/webapp/admin/statistics.xhtml
+++ b/view/src/main/webapp/admin/statistics.xhtml
@@ -46,7 +46,7 @@
 
             </div>
 
-            <c:forEach var="data" begin="0" end="#{adminBean.sizeList}" step="1" items="#{adminBean.list}">
+            <c:forEach var="data" items="#{adminBean.list}">
 
                 <table border="5%" cellpadding="5%" bgcolor="#f0ffff">
                     <tr>
